1、PCHunter主机扫描工具添加IP计算器，方便网络相关信息计算，位置"网络分析器"->"主机扫描"->"IP计算器"

--- a/Demo/PCHunter/PCHunter.vcproj
+++ b/Demo/PCHunter/PCHunter.vcproj
@@ -392,6 +392,10 @@
 				Name="Wnd"
 				>
 				<File
+					RelativePath=".\Wnd\IPTools.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Wnd\StaticArpDialog.cpp"
 					>
 				</File>
@@ -541,6 +545,10 @@
 			<Filter
 				Name="Wnd"
 				>
+				<File
+					RelativePath=".\Wnd\IPTools.h"
+					>
+				</File>
 				<File
 					RelativePath=".\Wnd\StaticArpDialog.h"
 					>
