--- a/Demo/PCHunter/PCHunter.vcproj
+++ b/Demo/PCHunter/PCHunter.vcproj
@@ -400,6 +400,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Utils\TimeInfo.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Utils\WMITools.cpp"
 					>
 				</File>
@@ -407,6 +411,10 @@
 			<Filter
 				Name="Wnd"
 				>
+				<File
+					RelativePath=".\Wnd\AboutDialog.cpp"
+					>
+				</File>
 				<File
 					RelativePath=".\Wnd\AddUserName.cpp"
 					>
@@ -574,6 +582,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Utils\TimeInfo.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Utils\WMITools.h"
 					>
 				</File>
@@ -581,6 +593,10 @@
 			<Filter
 				Name="Wnd"
 				>
+				<File
+					RelativePath=".\Wnd\AboutDialog.h"
+					>
+				</File>
 				<File
 					RelativePath=".\Wnd\AddUserName.h"
 					>
