--- a/Demo/PCHunter/Utils/ThreadPool.template
+++ b/Demo/PCHunter/Utils/ThreadPool.template
@@ -83,9 +83,9 @@ BOOL CThreadPoolMgr<CTaskType,CResultType>::AddJob(CTaskType& TaskInfo)
 	if (m_pThreadParam == NULL)
 		return FALSE;
 
-	InterlockedExchange((LONG*)&m_bFinished,FALSE);
 	m_bStoped = FALSE;
 	EnterCriticalSection(&m_CriticalSection);
+	m_bFinished = FALSE;
 	m_pThreadParam->TaskList.AddTail(TaskInfo);
 	LeaveCriticalSection(&m_CriticalSection);
 	if (m_bStartNow)
@@ -127,16 +127,17 @@ UINT CThreadPoolMgr<CTaskType,CResultType>::GetJobCount()
 {
 	EnterCriticalSection(&m_CriticalSection);
 	DWORD dwCount = m_pThreadParam->TaskList.GetCount();
-	LeaveCriticalSection(&m_CriticalSection);
 	
-	BOOL bFinished = FALSE;
-	InterlockedExchange((LONG*)&bFinished,m_bFinished);
-	
-	if (m_pFinshNotify != NULL && bFinished == FALSE && dwCount == 0)
+	BOOL bTaskFinished = FALSE;
+	if (m_bFinished == FALSE && dwCount == 0)
 	{
 		m_bFinished = TRUE;
-		m_pFinshNotify(m_lParam);
+		bTaskFinished = TRUE;
 	}
+	LeaveCriticalSection(&m_CriticalSection);
+	
+	if (m_pFinshNotify != NULL && bTaskFinished != FALSE)
+		m_pFinshNotify(m_lParam);
 	
 	return dwCount;
 }
