1、新增使用图片阴影下窗口使用圆角 2、修改TImageInfo结构体，将alpahChannel修改为bAlpha同时添加LPBYTE pBits、LPBYTE pSrcBits、BOOL bUseHSL 3、支持控件圆角 4、支持List控件表头宽度使用百分比 5、添加图标Panel类（类似苹果Dock工具）

--- a/Demo/PCHunter/PCHunter.vcproj
+++ b/Demo/PCHunter/PCHunter.vcproj
@@ -396,6 +396,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Utils\ServiceControl.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Utils\TextTools.cpp"
 					>
 				</File>
@@ -429,6 +433,14 @@
 				</File>
 				<File
 					RelativePath=".\Wnd\StaticArpDialog.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Control"
+				>
+				<File
+					RelativePath=".\Control\UIDockPane.cpp"
 					>
 				</File>
 			</Filter>
@@ -574,6 +586,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Utils\ServiceControl.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Utils\TextTools.h"
 					>
 				</File>
@@ -615,6 +631,14 @@
 				</File>
 				<File
 					RelativePath=".\Wnd\StaticArpDialog.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Control"
+				>
+				<File
+					RelativePath=".\Control\UIDockPane.h"
 					>
 				</File>
 			</Filter>
