1、新增3D旋转演示功能

--- a/Demo/Installer/Installer.vcproj
+++ b/Demo/Installer/Installer.vcproj
@@ -246,6 +246,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\3DView.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Installer.cpp"
 				>
 			</File>
@@ -271,6 +275,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\3DView.h"
+				>
+			</File>
 			<File
 				RelativePath=".\Installer.h"
 				>
