--- a/Demo/QRTool/QRTool.vcproj
+++ b/Demo/QRTool/QRTool.vcproj
@@ -180,6 +180,10 @@
 				RelativePath=".\QRTool.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\WndMagnet.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
@@ -196,6 +200,10 @@
 			</File>
 			<File
 				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\WndMagnet.h"
 				>
 			</File>
 		</Filter>
