1、移除Calendar演示库和LoadPE演示库 2、修改BDWallPaper百度图片演示库 3、其他演示库代码更新

--- a/Demo/PCHunter/PCHunter.vcproj
+++ b/Demo/PCHunter/PCHunter.vcproj
@@ -447,6 +447,10 @@
 					RelativePath=".\Wnd\StaticArpDialog.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\Wnd\WakeOnLan.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -647,6 +651,10 @@
 				</File>
 				<File
 					RelativePath=".\Wnd\StaticArpDialog.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Wnd\WakeOnLan.h"
 					>
 				</File>
 			</Filter>
