--- a/Demo/PCMaster/PCMaster.vcproj
+++ b/Demo/PCMaster/PCMaster.vcproj
@@ -245,6 +245,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\HttpResponse.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\MainFrame.cpp"
 				>
 			</File>
@@ -300,6 +304,10 @@
 			>
 			<File
 				RelativePath=".\ChangeEvent.h"
+				>
+			</File>
+			<File
+				RelativePath=".\HttpResponse.h"
 				>
 			</File>
 			<File
