1、上传PCHunter改动记录 2、其他资源变更记录

--- a/Demo/Installer/Installer.vcproj
+++ b/Demo/Installer/Installer.vcproj
@@ -250,6 +250,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\AnimLayout.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Installer.cpp"
 				>
 			</File>
@@ -277,6 +281,10 @@
 			>
 			<File
 				RelativePath=".\3DView.h"
+				>
+			</File>
+			<File
+				RelativePath=".\AnimLayout.h"
 				>
 			</File>
 			<File
