二维码工具库移除引用头文件，添加静态编译方式，目前在Richedit中有一个问题是，具有下划线的文字会穿透，待修改

--- a/Demo/QRTool/QRTool.vcproj
+++ b/Demo/QRTool/QRTool.vcproj
@@ -40,10 +40,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)Library&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
