--- a/Demo/ImageView/ImageView.vcproj
+++ b/Demo/ImageView/ImageView.vcproj
@@ -245,6 +245,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\3DView.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ImageView.cpp"
 				>
 			</File>
@@ -256,12 +260,20 @@
 				RelativePath=".\StdAfx.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\UIImageView.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\3DView.h"
+				>
+			</File>
 			<File
 				RelativePath=".\ImageView.h"
 				>
@@ -272,6 +284,10 @@
 			</File>
 			<File
 				RelativePath=".\StdAfx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UIImageView.h"
 				>
 			</File>
 		</Filter>
