1、辅助工具设置全局互斥对象

--- a/Tools/CorpseTools/CorpseTools.vcproj
+++ b/Tools/CorpseTools/CorpseTools.vcproj
@@ -339,6 +339,14 @@
 					>
 				</Filter>
 			</Filter>
+			<Filter
+				Name="Common"
+				>
+				<File
+					RelativePath=".\Common\Common.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
@@ -400,6 +408,14 @@
 					Name="SystemSetting"
 					>
 				</Filter>
+			</Filter>
+			<Filter
+				Name="Common"
+				>
+				<File
+					RelativePath=".\Common\Common.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
