1、提交RichEdit富文本增加气泡功能
Signed-off-by: Unique <1054457048@qq.com>

--- a/Demo/MusicPlayer/MusicPlayer.vcproj
+++ b/Demo/MusicPlayer/MusicPlayer.vcproj
@@ -173,6 +173,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\LyricTool.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Main.cpp"
 				>
 			</File>
@@ -184,12 +188,20 @@
 				RelativePath=".\StdAfx.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\UILyric.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\LyricTool.h"
+				>
+			</File>
 			<File
 				RelativePath=".\PlayerMain.h"
 				>
@@ -200,6 +212,10 @@
 			</File>
 			<File
 				RelativePath=".\StdAfx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UILyric.h"
 				>
 			</File>
 		</Filter>
