--- a/Demo/HiDPIDemo/HiDPIDemo.vcproj
+++ b/Demo/HiDPIDemo/HiDPIDemo.vcproj
@@ -189,6 +189,14 @@
 						UsePrecompiledHeader="1"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"
+					/>
+				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
