1、PCHunter演示工程增加对适配器支持，完善网络连接图标显示功能 2、TCP服务器演示工程，增加数据解析功能 3、完善ADELLock接口库，接收原始参数 4、DllCore动态库新增通过进程ID获取进程路径方法
Signed-off-by: Unique <1054457048@qq.com>

--- a/Demo/PCHunter/PCHunter.vcproj
+++ b/Demo/PCHunter/PCHunter.vcproj
@@ -327,6 +327,10 @@
 					Name="Network"
 					>
 					<File
+						RelativePath=".\VirtualWnd\Network\Adapter.cpp"
+						>
+					</File>
+					<File
 						RelativePath=".\VirtualWnd\Network\Connect.cpp"
 						>
 					</File>
@@ -536,6 +540,10 @@
 				<Filter
 					Name="Network"
 					>
+					<File
+						RelativePath=".\VirtualWnd\Network\Adapter.h"
+						>
+					</File>
 					<File
 						RelativePath=".\VirtualWnd\Network\Connect.h"
 						>
