1、删除Encrypt操作类 2、补充上传SignTool工具源码
Signed-off-by: Unique <1054457048@qq.com>

--- a/Demo/SignTool/SignTool.vcproj
+++ b/Demo/SignTool/SignTool.vcproj
@@ -175,6 +175,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\HighClass.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\MainFrame.cpp"
 				>
 			</File>
@@ -202,6 +206,10 @@
 			>
 			<File
 				RelativePath=".\Encrypt.h"
+				>
+			</File>
+			<File
+				RelativePath=".\HighClass.h"
 				>
 			</File>
 			<File
